; ModuleID = '/home/carl/AnghaBench/netdata/database/engine/extr_datafile.c_init_data_files.c'
source_filename = "/home/carl/AnghaBench/netdata/database/engine/extr_datafile.c_init_data_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rrdengine_instance = type { i32, i32 }

@.str = private unnamed_addr constant [26 x i8] c"Failed to scan path \22%s\22.\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"Data files not found, creating in path \22%s\22.\00", align 1
@.str.2 = private unnamed_addr constant [54 x i8] c"Failed to create data and journal files in path \22%s\22.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @init_data_files(%struct.rrdengine_instance* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rrdengine_instance*, align 8
  %4 = alloca i32, align 4
  store %struct.rrdengine_instance* %0, %struct.rrdengine_instance** %3, align 8
  %5 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %3, align 8
  %6 = call i32 @scan_data_files(%struct.rrdengine_instance* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %3, align 8
  %11 = getelementptr inbounds %struct.rrdengine_instance, %struct.rrdengine_instance* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @error(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %38

15:                                               ; preds = %1
  %16 = load i32, i32* %4, align 4
  %17 = icmp eq i32 0, %16
  br i1 %17, label %18, label %36

18:                                               ; preds = %15
  %19 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %3, align 8
  %20 = getelementptr inbounds %struct.rrdengine_instance, %struct.rrdengine_instance* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @info(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %23 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %3, align 8
  %24 = call i32 @create_new_datafile_pair(%struct.rrdengine_instance* %23, i32 1, i32 1)
  store i32 %24, i32* %4, align 4
  %25 = load i32, i32* %4, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %33

27:                                               ; preds = %18
  %28 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %3, align 8
  %29 = getelementptr inbounds %struct.rrdengine_instance, %struct.rrdengine_instance* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @error(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.2, i64 0, i64 0), i32 %30)
  %32 = load i32, i32* %4, align 4
  store i32 %32, i32* %2, align 4
  br label %38

33:                                               ; preds = %18
  %34 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %3, align 8
  %35 = getelementptr inbounds %struct.rrdengine_instance, %struct.rrdengine_instance* %34, i32 0, i32 0
  store i32 1, i32* %35, align 4
  br label %36

36:                                               ; preds = %33, %15
  br label %37

37:                                               ; preds = %36
  store i32 0, i32* %2, align 4
  br label %38

38:                                               ; preds = %37, %27, %9
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @scan_data_files(%struct.rrdengine_instance*) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @info(i8*, i32) #1

declare dso_local i32 @create_new_datafile_pair(%struct.rrdengine_instance*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
